--- a/ESchoolOffice/templates/asset/AssetManagementIn.html
+++ b/ESchoolOffice/templates/asset/AssetManagementIn.html
@@ -143,6 +143,8 @@
 <!--                    </div>-->
 <!--                </div>-->
 <!--            </div>-->
+
+
         </div>
 
     </div>
@@ -167,7 +169,7 @@
                 </div>
 
                 <div class="col-md-2 text-left">
-                    <button class="btn btn-success btn-btn" onclick="return confirm('Are you sure you want to activate this Academic Year');">
+                    <button class="btn btn-success btn-btn" onclick="return confirm('Are you sure you want add this bill');">
                         Submit
                     </button>
                 </div>
