--- a/ESchoolOffice/templates/academic_settings/subject_add.html
+++ b/ESchoolOffice/templates/academic_settings/subject_add.html
@@ -1,23 +1,14 @@
-<!DOCTYPE html>
-<html lang="">
-<head>
-<title>Subject</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="CSS/style.css" rel="stylesheet" type="text/css" media="all">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-</head>
-<body id="top">
+{% extends 'layout/base_template.html' %}
+{% block title %} Subjects {% endblock title %}
 
+{% block body_data %}
 
 
 <form action="" method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit" class="btn btn-success">
 </form>
 
 
-
-</body>
-</html>
+{% endblock body_data %}
