--- a/ESchoolOffice/templates/academic_settings/subjects_list.html
+++ b/ESchoolOffice/templates/academic_settings/subjects_list.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
+{% extends 'layout/base_template.html' %}
+{% block title %} Subjects {% endblock title %}
 
-<html lang="">
+{% block body_data %}
 
-<head>
-<title>Subject</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="CSS/style.css" rel="stylesheet" type="text/css" media="all">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-</head>
-<body id="top">
 <h1>Subjects</h1>
 <a href="{% url 'add-subject' %}">Add</a>
-<table border="1">
+<table class="table table-primary">
     <thead>
         <th>Slno</th>
         <th>Name</th>
@@ -36,5 +29,5 @@
     </tbody>
 </table>
 
-</body>
-</html>
+{% endblock body_data %}
+
