--- a/ESchoolOffice/templates/pta/PTACommiteeRegisration.html
+++ b/ESchoolOffice/templates/pta/PTACommiteeRegisration.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'layout/base_template.html' %}
+{% block title %} Subjects {% endblock title %}
 
-</body>
-</html>
+{% block body_data %}
+
+<div style="height:30px">
+<td><a href='{%  url 'pta:pta_reg_create'  %}'>Create </a></td>
+</div>
+<div style="height:100px">Index Of PTA Committee Registration</div>
+{% if committee_registration_list %}
+    <table class="table table-primary">
+        <tr>
+        <th>Academic Year</th>
+        <th>Designation</th>
+        <th>Parent</th>
+        <th>Actions</th>
+        </tr>
+    {% for registration in committee_registration_list %}
+        <tr>
+        <td>{{ registration.academicyear.acyear_year }}
+        <td>{{ registration.ptadesignation.pta_designation_name }}</td>
+        <td>{{ registration.parent.parent_name }}</td>
+        <td><a href="/pta/reg/view/{{ designation.id }}/">View </a></td>
+        <td><a href="/pta/reg/delete/{{ designation.id }}/">Delete </a></td>
+        <td><a href="/pta/reg/update/{{ designation.id }}/">Update </a></td>
+        </tr>
+    {% endfor %}
+    </table>
+{% else %}
+    <p>No PTA Committee Registrations  Added.</p>
+{% endif %}
+
+{% endblock body_data %}
