--- a/ESchoolOffice/templates/pta/PTACommiteeRegistrationDetail.html
+++ b/ESchoolOffice/templates/pta/PTACommiteeRegistrationDetail.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'layout/base_template.html' %}
+{% block title %} Subjects {% endblock title %}
 
-</body>
-</html>
+{% block body_data %}
+
+
+<!--<div class ="test">Sample</div>-->
+
+<table class="table table-primary">
+    <tr>
+        <th>Field</th>
+        <th>Value</th>
+    </tr>
+    <tr>
+        <td>Academic Year</td>
+        <td>{{ object.academicyear.acyear_year }}</td>
+    </tr>
+    <tr>
+        <td>Designation</td>
+        <td>{{ object.ptadesignation.pta_designation_name }}</td>
+    </tr>
+    <tr>
+        <td>Parent</td>
+        <td>{{ object.parent.parent_name }}</td>
+    </tr>
+</table>
+
+{% endblock body_data %}
