--- a/ESchoolOffice/templates/pta/PTACommiteeRegistrationForm.html
+++ b/ESchoolOffice/templates/pta/PTACommiteeRegistrationForm.html
@@ -1,20 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'layout/base_template.html' %}
+{% block title %} Subjects {% endblock title %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
- {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'CSS/style.css' %}">
-</head>
-<body>
+{% block body_data %}
+
+
 <!--<div class ="test">Sample</div>-->
 <form action="reg_create" method="post">
     {% csrf_token %}
-    <table>
-         {{ form.as_p }}
+    <table class="table table-primary">
+         {{ form.as_table }}
     </table>
     <input type="submit" value="Submit">
 </form>
-</body>
-</html>
+{% endblock body_data %}
