--- a/ESchoolOffice/templates/user_settings/Caste.html
+++ b/ESchoolOffice/templates/user_settings/Caste.html
@@ -1,7 +1,15 @@
-{% extends 'layout/base_template.html' %}
-{% block title %} Caste {% endblock title %}
+<!DOCTYPE html>
 
-{% block body_data %}
+<html lang="">
+
+<head>
+<title>Caste</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<link href="CSS/style.css" rel="stylesheet" type="text/css" media="all">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+</head>
+<body id="top">
 <form method="post">
  {% csrf_token %}
 <div class="container">
@@ -92,4 +100,6 @@
     </div>
     </div>
 </form>
-{% endblock body_data %}
+
+</body>
+</html>
